avoid calling toupper with posibly -ve value. fixes PR 21171